--- a/src/SearchAuthor.css
+++ b/src/SearchAuthor.css
@@ -26,6 +26,18 @@
   background-color: #f0f0f0;
 }
 
+.favorite-aside p {
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+
+.favorite-aside li {
+  font-size: 14px;
+  line-height: 1.5;
+}
+
+
 .quotes-list {
   margin-top: 32px;
 }
