--- a/src/SearchAuthor.css
+++ b/src/SearchAuthor.css
@@ -1,11 +1,25 @@
 .search-title {
+  border:5px solid sandybrown;
   font-size: 24px;
   font-weight: bold;
   margin-bottom: 16px;
+  text-align: center;
+}
+
+.author-content {
+  border: 1px solid salmon;
+  border-radius: 5px;
+  margin-left: 30%;
+  margin-right: 20%;
+  text-align: center;
 }
 
 .authors-list {
-  margin-bottom: 32px
+  border: 1px solid black;
+  float: left;
+  width: 30%;
+  margin-right: 30px;
+  margin-bottom: 32px;
 }
 
 .authors-list ul{
@@ -26,6 +40,12 @@
   background-color: #f0f0f0;
 }
 
+.favorite-aside {
+  float: right;
+  width: 30%;
+  margin-left: 30px;
+}
+
 .favorite-aside p {
   font-size: 16px;
   font-weight: bold;
@@ -37,6 +57,21 @@
   line-height: 1.5;
 }
 
+.home-button{
+  display: block;
+  margin: 0 auto;
+  margin-top: 20px;
+  padding: 10px 20px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.home-button:hover{
+  background-color: #3e8e41;
+}
 
 .quotes-list {
   margin-top: 32px;
