--- a/src/FavoriteQuotes.css
+++ b/src/FavoriteQuotes.css
@@ -1,4 +1,4 @@
-.favorite-aside p {
+/* .favorite-aside p {
   font-size: 16px;
   font-weight: bold;
   margin-bottom: 8px;
@@ -7,4 +7,5 @@
 .favorite-aside li {
   font-size: 14px;
   line-height: 1.5;
-}
+  margin-bottom: 8px;
+} */
